--- a/client/src/components/LeftSidebar/LeftSidebar.module.scss
+++ b/client/src/components/LeftSidebar/LeftSidebar.module.scss
@@ -108,7 +108,7 @@
   
   .gamesLink a { /* Додаємо правило для всіх посилань всередині .gamesLink */
     text-decoration: none; /* Прибирає підкреслення */
-    color: green; /* Задає колір тексту */
+    color: orange; /* Задає колір тексту */
     font-size: 24px; /* Задає розмір шрифту */
     font-weight: 600; /* Задає вагу шрифту */
   }
