--- a/client/src/pages/Games/Game2/Game2.module.scss
+++ b/client/src/pages/Games/Game2/Game2.module.scss
@@ -1,9 +1,9 @@
 .game2 {
     text-align: center;
-    background-color: #282c34;
-    min-height: 80vh;
+    // background-color: #282c34;
+    // min-height: 80vh;
     width: 100%;
-    // height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
