--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -6,6 +6,8 @@
   border-radius: 10px;
   overflow: hidden;
   padding-right: 5px;
+  top: 0; // Додаємо top
+  z-index: 1000; // Високий z-index для перекриття
 }
 
 header {
