--- a/client/src/pages/GroupPage/GroupPage.module.scss
+++ b/client/src/pages/GroupPage/GroupPage.module.scss
@@ -1,9 +1,8 @@
 @import "../../App.scss";
 
 .groupContainer {
-  // display: flex;
-  // flex-direction: column;  
-  background: rgb(62, 62, 65);
+  display: flex;
+  flex-direction: column;  
   background: linear-gradient(
     90deg,
     rgba(62, 62, 65, 1) 0%,
@@ -11,21 +10,43 @@
     rgba(0, 15, 18, 1) 100%
   );
   padding: 20px 30px;
+  width: 99%;  
+  box-sizing: border-box;
 }
 
 .groupHeader {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap; /* Вимкнути перенос елементів */
   gap: 20px;  
-  border-radius: 10px;
-  // padding: 20px 10px;
-  width: 100%;
+  // border-radius: 10px;
+  overflow-x: auto; /* Додати горизонтальний скрол */ 
+  width: 60vw; /* Змінено на 100% для адаптивності */
   margin-bottom: 50px;
-  
+  // border: 4px solid orange;
+  padding: 20px 10px; /* Адаптуйте паддінги за потреби */
+  // box-sizing: border-box; /* Включити паддінги в ширину */
+  margin: 0 auto;
 }
 
+// .groupHeader::-webkit-scrollbar {
+//   height: 8px !important;
+// }
+
+// .groupHeader::-webkit-scrollbar-track {
+//   background: #2f2f2f !important;
+// }
+
+// .groupHeader::-webkit-scrollbar-thumb {
+//   background-color: #555 !important;
+//   border-radius: 10px !important;
+//   border: 2px solid #2f2f2f !important;
+// }
+
 .groupRender {
+  margin-top: 20px;
+  text-align: center;
   // padding: 20px;  /* Додаємо відступ для groupRender */
+  // padding-right: 20px;
   width: 100%;    /* Забезпечуємо, що контейнер займає всю ширину */
 }
 
@@ -48,6 +69,7 @@
 }
 
 .post p {
+  // width: 97%;
   word-wrap: break-word; /* Перенос слів */
   margin: 0;             /* Прибираємо відступи */
 }
