--- a/client/src/pages/ProfilePage/Workplace/Workplace.module.scss
+++ b/client/src/pages/ProfilePage/Workplace/Workplace.module.scss
@@ -85,3 +85,30 @@
 .suggestions li:hover {
   background-color: #f0f0f0;
 }
+
+.currentWorkplace {
+  background: rgba(20, 30, 48, 0.8);
+  border-radius: 12px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3);
+}
+
+.subtitle {
+  font-size: 1.4rem;
+  color: #b0b0b0;
+  margin-bottom: 10px;
+}
+
+.workplaceText {
+  font-size: 1.2rem;
+  color: #ffffff;
+  margin-top: 8px;
+  font-weight: 500;
+}
+
+.workplaceText.noWorkplace {
+  color: #f15b5b;
+  font-style: italic;
+}
+
