--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -17,7 +17,9 @@
     transition: 1.5s;
       
     li {
-      margin-bottom: 10px;
+      display: flex;
+      align-items: center;      
+      gap: 10px;      
     }
   
   }
