--- a/client/src/pages/UsersPage/UsersPage.module.scss
+++ b/client/src/pages/UsersPage/UsersPage.module.scss
@@ -1,9 +1,12 @@
+@import "../../App.scss";
+
 .userBox {
   display: flex;
   flex-wrap: wrap;
   gap: 50px 20px;
   padding: 0 20px;
   justify-content: space-between;
+}
 
   .userCard {
     position: relative;
@@ -13,6 +16,17 @@
     transform-style: preserve-3d;
     transition: transform 0.6s;
     cursor: pointer;
+
+    @media (max-width: 1024px) and (min-width: 768px) {
+      width: 45%;
+    }
+  
+    // Styles for mobile screens
+    @media (max-width: 768px) {
+      width: 100%;
+      height: 180px;
+    }
+
     &.flipped {
       transform: rotateY(180deg);
     }
@@ -30,6 +44,11 @@
     flex-direction: column; // Устанавливаем расположение в колонну
     justify-content: center; // Центрируем элементы по вертикали
     align-items: center; // Центрируем элементы по горизонтали
+
+     // Adjust text size for smaller screens
+  h2 {
+    font-size: $font-size-medium;
+  }
   }
 
   .back {
@@ -73,6 +92,18 @@
     object-fit: cover; /* Зберігає пропорції і заповнює контейнер */
     object-position: top; /* Вирівнює зображення по верхньому краю */
     border-radius: 20px; /* Додає закруглені кути до зображення */
+
+      // Style for tablet screens
+  @media (max-width: 1024px) and (min-width: 768px) {
+    width: 75%;
+    height: 75%;
+  }
+
+  // Style for mobile screens
+  @media (max-width: 768px) {
+    width: 70%;
+    height: 70%;
+  }
   }
 
   .link {
@@ -88,6 +119,11 @@
       color: #d1c4ff; // Цвет текста ссылки при наведении
       transform: scale(1.1);
     }
+
+      // Style for mobile screens
+  @media (max-width: 768px) {
+    font-size: 16px;
+  }
   }
 
   .infoUser {
@@ -104,12 +140,22 @@
     &:hover {
       color: #ffffff; // Цвет текста при наведении
     }
+
+      // Style for mobile screens
+  @media (max-width: 768px) {
+    font-size: 14px;
   }
-}
+  }
+
 .searchContainer {
   display: flex;
   justify-content: center;
   margin: 20px 0;
+
+    // Style for mobile screens
+    @media (max-width: 768px) {
+      margin: 15px 0;
+    }
 }
 
 .searchInput {
@@ -127,6 +173,12 @@
     border-color: #6a5acd;
     box-shadow: 0 2px 8px rgba(106, 90, 205, 0.3);
   }
+
+    // Style for mobile screens
+    @media (max-width: 768px) {
+      width: 80%;
+      font-size: 14px;
+    }
 }
 
 // .userBox {
