fonts in App scss

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -76,8 +76,9 @@ $font-weight-ultra-light: 100;
 
 
 /* Fonts */
-$primary-font: 'Arial', sans-serif;
-$heading-font: 'Helvetica', sans-serif;
+$primary-font: 'Roboto Slab', serif;
+$heading-font: 'Orbitron', sans-serif;
+$button-font: 'Audiowide', sans-serif;
 $font-size-small: 12px;
 $font-size-medium: 16px;
 $font-size-large: 24px;
