--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   width: 10%; // Збільшена ширина
   height: 79%;
+  max-height: 79%; // Обмежує висоту елемента
   padding-top: 20px;
   background-color: $nodle-black-800;
   border-radius: 10px;
@@ -13,28 +14,58 @@
   top: 180px;
   right: 10px;
   transition: 1.5s;
+  
+  // Додаємо прокручування, якщо вміст виводиться за межі
+  overflow-y: auto;
+  padding-right: 10px; // Додаємо відступ для скроллбару, щоб він не накладався на вміст
+  
+  // Кастомний скроллбар
+  &::-webkit-scrollbar {
+    width: 6px; // Встановлює ширину скролбару
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888; // Колір для скроллбару
+    border-radius: 10px; // Круглі краї
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #555; // Колір для скроллбару при наведенні
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent; // Прозорий фон для дорожки скролбару
+  }
 }
 
 .friendItem {
   display: flex;
   align-items: center;
   justify-content: space-between; // Розташовує елементи на протилежних сторонах
+  gap: 5px;
   padding: 5px;
   width: 100%;
 }
 
 .friendLink {
   display: flex;
-  align-items: center;
-  gap: 10px;
+  align-items: center; 
+  gap: 5px;
   text-decoration: none;
-  color: green;
+  color: yellow;
+  border: solid 1px gray;
+  border-radius: 20px;
+  padding: 5px;
   flex-grow: 1; // Розтягує блок з ім'ям для заповнення простору
 }
 
 .friendName {
   display: flex;
   flex-direction: column; // Ім'я та прізвище в два рядки
+}
+
+.friendName, .lastName p {
+  font-size: 14px;
 }
 
 .deleteButton {
