--- a/client/src/pages/GroupPage/GroupPage.module.scss
+++ b/client/src/pages/GroupPage/GroupPage.module.scss
@@ -79,7 +79,7 @@
   font-weight: 500;
   margin: 30px;
   color: yellow;
-  text-shadow: 0 0 20px rgba(255, 255, 255, 0.7), 0 0 40px rgba(255, 255, 255, 0.5);
+  text-shadow: 0 0 20px rgba(255, 255, 255, 0.7), 0 0 40px rgba(255, 255, 255, 0.5);  
 }
 
 .groupDetails p {
@@ -142,9 +142,15 @@
   margin-top: 10px;
 }
 
+.likes {
+  display: flex;
+  align-items: center;
+  gap: 5px;  
+}
+
 .likes, .comments {
   font-size: 14px;
-  color: #555;
+  color: gray;
 }
 
 .commentForm {
