--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -11,10 +11,11 @@
 }
 
 header {
+  display: flex;
   padding: 20px;
   background-color: $nodle-black-800;
-  position: absolute;
-  top: 0;
+  // position: absolute;
+  // top: 0;
   // right: -320px;
   width: 100%;
 
@@ -27,6 +28,56 @@ header {
     font-size: $font-size-title;
     font-weight: $font-weight-bold;
     cursor: pointer;
+  }
+
+  .radioBtn {
+    width: 80px;
+    height: 26px;
+    background: #333;
+    // margin: 20px auto;
+    position: relative;
+    border-radius: 50px;
+    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
+    &:after {
+      content: 'UA';
+      color:green;
+      position: absolute;
+      right: 10px;
+      z-index: 0;
+      font: 12px/26px Arial, sans-serif;
+      font-weight: bold;
+      text-shadow: 1px 1px 0px rgba(255,255,255,.15);
+    }
+    &:before {
+      content: 'EN';
+      color: green;
+      position: absolute;
+      left: 10px;
+      z-index: 0;
+      font: 12px/26px Arial, sans-serif;
+      font-weight: bold;
+    }
+    label {
+      display: block;
+      width: 34px;
+      height: 20px;
+      cursor: pointer;
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      z-index: 1;
+      background:grey;
+      background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+      border-radius: 50px;
+      transition: all 0.4s ease;
+      box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
+    }
+    input[type=checkbox] {
+      visibility: hidden;
+      &:checked + label {
+        left: 43px;
+      }
+    }    
   }
 
   a {
@@ -60,14 +111,15 @@ header {
   .header {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
 
   .headerTop {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 20px;
-    padding: 20px;
+    gap: 30px;
+    padding: 20px;    
     box-sizing: border-box;
     border-bottom: 1px solid $nodle-black-700;
   }
