--- a/client/src/pages/LoginPage/LoginPage.module.scss
+++ b/client/src/pages/LoginPage/LoginPage.module.scss
@@ -108,10 +108,16 @@
   margin: 0;
   padding: 0;
 }
+.logHeader {
+  position: relative;
+    background-color: transparent !important;
+    margin-top: 15px;
+    padding: 0;
+}
 
 .loginBox {
-  width: 800px;
-  height: 800px;
+  width: 100%;
+  height: 750px;
   // min-height: 100vw;
   display: flex;
   align-items: center;
@@ -125,7 +131,6 @@
   box-sizing: border-box;
   position: relative;
 }
-
 .wrapper {
   position: relative;
   max-width: 470px;
@@ -138,12 +143,16 @@
   backdrop-filter: saturate(180%) blur(8px);
 }
 .form.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   position: absolute;
   left: 50%;
   bottom: -86%;
   transform: translateX(-50%);
-  width: calc(100% + 220px);
-  padding: 20px 140px;
+  width: calc(25% + 210px);
+  padding: 0px 140px;
   border-radius: 50%;
   height: 100%;
   background: #030f4a;
@@ -153,7 +162,7 @@
 }
 .wrapper.active .form.login {
   bottom: -15%;
-  border-radius: 35%;
+  border-radius: 26%;
   box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
 }
 .form header {
@@ -238,4 +247,14 @@ form input[type="submit"] {
   background: #01c5c4;
   color: #fff;
   border: none;
+}
+
+.signUpBtn,.loginBtn {
+  padding: 15px;
+  background: #01c5c4;
+  color: white;
+  border-radius: 8px;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
 }
