--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -107,15 +107,19 @@ $large-screen-breakpoint: 1440px;
 
 
 // __________________________________________\\
+
+
 .container {
   display: flex;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   // padding: 10px;
   gap: 10px;
   // width: 1900px;
   width: 100vw;
   position: relative;
 }
+
+
 
 .inner {
   display: flex;
@@ -158,6 +162,7 @@ body {
   // width: 100vh;
   // height: 100vh;
 }
+
 
 .logo {
   // font-size: $font-size-large;
