--- a/client/src/components/LeftSidebar/LeftSidebar.module.scss
+++ b/client/src/components/LeftSidebar/LeftSidebar.module.scss
@@ -10,18 +10,25 @@
   top: 10px;
   left: 10px;
 
-  .iconWrapper {
-    background-color: $background-button;
-    position: absolute;
-    top: 30px;
-    width: 80%;
-    left: 10px;
-    padding: 10px;
-    border-radius: 10px;
+  .functionBlock {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    margin-top: 20px;
   }
+
+  // .iconWrapper {
+  //   background-color: $background-button;
+  //   position: absolute;
+  //   top: 30px;
+  //   width: 80%;
+  //   left: 10px;
+  //   padding: 10px;
+  //   border-radius: 10px;
+  //   display: flex;
+  //   justify-content: space-between;
+  //   align-items: center;
+  // }
 
   .iconWrapper img {
     width: 70px;
@@ -60,44 +67,44 @@
     cursor: pointer;
   }
 
-  .exit {
-    position: absolute;
-    bottom: 30px;
-    width: 80%;
-    left: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: $background-button;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
+  // .exit {
+  //   position: absolute;
+  //   bottom: 30px;
+  //   width: 80%;
+  //   left: 10px;
+  //   padding: 10px;
+  //   border-radius: 10px;
+  //   background-color: $background-button;
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   align-items: center;
+  //   justify-content: space-between;
+  //   gap: 10px;
 
-    .exitBlock {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
+  //   .exitBlock {
+  //     display: flex;
+  //     flex-wrap: wrap;
+  //     gap: 20px;
+  //   }
 
-    .exitUser {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      color: #b6f09c;
-      line-height: 25px;
-    }
+  //   .exitUser {
+  //     display: flex;
+  //     flex-direction: column;
+  //     align-items: center;
+  //     justify-content: center;
+  //     color: #b6f09c;
+  //     line-height: 25px;
+  //   }
 
-    .exitBlockImg {
-      width: 70px;
-      height: 70px;
-      border-radius: 50%;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-  }
+  //   .exitBlockImg {
+  //     width: 70px;
+  //     height: 70px;
+  //     border-radius: 50%;
+  //     background-size: cover;
+  //     background-repeat: no-repeat;
+  //     background-position: center;
+  //   }
+  // }
   .gamesLink {
     display: flex;
     flex-direction: column;
@@ -105,8 +112,9 @@
     gap: 30px;
     margin-top: 50px;
   }
-  
-  .gamesLink a { /* Додаємо правило для всіх посилань всередині .gamesLink */
+
+  .gamesLink a {
+    /* Додаємо правило для всіх посилань всередині .gamesLink */
     text-decoration: none; /* Прибирає підкреслення */
     color: orange; /* Задає колір тексту */
     font-size: 24px; /* Задає розмір шрифту */
@@ -130,18 +138,18 @@
   border-radius: 5px; /* Rounded corners for buttons */
   position: relative; /* For positioning glow effect */
   transition: color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
-  
+
   /* Space-like text glow */
   // text-shadow: 0 0 5px rgba(255, 255, 255, 0.8), 0 0 10px rgba(255, 255, 255, 0.6), 0 0 15px rgba(255, 255, 255, 0.4);
 }
 
 // .gamesLink a::before {
-//   content: ''; 
-//   position: absolute; 
-//   top: 50%; 
-//   left: 50%; 
-//   width: 100%; 
-//   height: 100%; 
+//   content: '';
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   width: 100%;
+//   height: 100%;
 //   background: linear-gradient(45deg, #00ffea, #ff00f6, #ff004b, #00aaff);
 //   background-size: 400% 400%; /* Smooth color transitions */
 //   border-radius: 5px;
@@ -167,4 +175,3 @@
     background-position: 0% 50%;
   }
 }
-
