--- a/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
+++ b/client/src/pages/ProfilePage/GeneralInformation/generalInformation.module.scss
@@ -1,10 +1,16 @@
-.container {  
+.generalContainer {  
   display: flex;
   padding: 30px;
   background: linear-gradient(to bottom, #141e30, #243b55);
   color: #ffffff;
   border-radius: 15px;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+  // width: 1000px;
+  // height: 1000px;
+  // position: fixed;
+  // top: 0;
+  // right: 0;
+  // z-index: 1000;
 }
 
 .sidebar {
