--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -44,6 +44,7 @@ $border-primary:#5cb85c;
 
 $font-size-title: 34px;
 $font-size-text: 24px;
+$font-size-text-news: 20px;
 
 $font-weight-black: 900; // h1 //
 $font-weight-extra-bold: 800; // h2 и даже для h3 //
@@ -80,6 +81,7 @@ $primary-font: 'Roboto Slab', serif;
 $heading-font: 'Orbitron', sans-serif;
 $button-font: 'Audiowide', sans-serif;
 $font-size-small: 12px;
+$font-size-small-medium: 14px;
 $font-size-medium: 16px;
 $font-size-large: 24px;
 
